--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <nav class="navbar navbar-expand-lg bg-transparent  fixed-top">
-    <div class="container bg-light custom-topNav">
+    <div class="container bg-warning custom-topNav">
       <a class="navbar-brand" href="#">Navbar</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -123,25 +123,25 @@
           <h3>My Portfolio</h3>
           <h4>What I Do</h4>
 
-          <div class="row mb-4">
-            <div class="col-md-4">
+          <div class="row">
+            <div class="col-md-4 mb-4">
               <img src="https://via.placeholder.com/400" class="w-100" alt="">
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 mb-4">
               <img src="https://via.placeholder.com/400" class="w-100" alt="">
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 mb-4">
               <img src="https://via.placeholder.com/400" class="w-100" alt="">
             </div>
           </div>
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 mb-4">
               <img src="https://via.placeholder.com/400" class="w-100" alt="">
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 mb-4">
               <img src="https://via.placeholder.com/400" class="w-100" alt="">
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 mb-4">
               <img src="https://via.placeholder.com/400" class="w-100" alt="">
             </div>
           </div>
@@ -151,7 +151,7 @@
           <h3>Contact</h3>
           <h4>Let's Talk</h4>
           <div class="row text-dark ">
-            <div class="offset-md-3 col-md-6">
+            <div class="offset-lg-2 col-lg-8">
               <div class="form-floating mb-3">
                 <input type="text" class="form-control" id="floatingInput" placeholder="John Doe">
                 <label for="floatingInput">Full Name</label>
